Fix query-only and fragment-only relative URLs when using URLParser https://bugs.webkit.org/show_bug.cgi?id=161657

Reviewed by Tim Horton.

Source/WebCore:

Covered by new API tests and progress towards passing the web platform tests when using URLParser.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/179842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205526 268f45cc-cd09-0410-ab3c-d52691b4dbfc